Renombrado en esquema (#23)
* schema changed

* .json added

* code updated

* Fixes for cucumber testing

* Pushed cucumber tests
